# fastpeq

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TEST_PLAN.md  index.html  osd.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
crates/fastpeq-core/: Cargo.toml
crates/fastpeq-core/src/: category.rs  history.rs  lib.rs  manager.rs  offload.rs  peace.rs  provenance.rs  store.rs  tone.rs
crates/fastpeq-core/src/apo/: env.rs  mod.rs  model.rs  parse.rs  serialize.rs  writer.rs
crates/fastpeq-core/tests/: roundtrip.rs  storage.rs
crates/fastpeq-hw/: Cargo.toml
crates/fastpeq-hw/src/: fiio.rs  hid.rs  lib.rs  moondrop.rs  moondrop_family.rs  protocol.rs  walkplay.rs  worker.rs
docs/: IDEAS.md  OSD_OVERLAY_BUG.md  PERSISTENCE.md  PRESET-HISTORY.md  REVIEW-2.md  REVIEW-3.md  REVIEW-4.md  REVIEW.md  TEST_PLAN.md
e2e/: README.md  wdio.conf.js
e2e/helpers/: seed.js
e2e/specs/: smoke.e2e.js
scripts/: bump-version.mjs
src/: App.svelte  App.test.ts  app.css  main.ts
src-tauri/: Cargo.toml  main.wxs  tauri.conf.json
src-tauri/capabilities/: osd.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  hotkeys.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/hardware/: fiio.rs  hid.rs  mod.rs  moondrop.rs  walkplay.rs  worker.rs
src/lib/: BandRow.svelte  BandRow.test.ts  CategoryIcon.svelte  CurveEditor.svelte  Editor.svelte  Editor.test.ts  FilterList.svelte  FloatingMenu.svelte  GraphTools.svelte  HardwarePanel.svelte  HardwarePanel.test.ts  HotkeyRow.svelte  HotkeyRow.test.ts  HotkeysPage.svelte  Knob.svelte  Knob.test.ts  PreampRow.svelte  PresetPicker.svelte  PresetPicker.test.ts  PresetsPanel.svelte  ResponseCurve.svelte  ResponseCurve.test.ts  SelectMenu.svelte  SelectMenu.test.ts  Settings.svelte  Switch.svelte  ToneGenerator.svelte  TonePanel.svelte  TypeSelect.svelte  TypeSelect.test.ts  api.ts  constants.ts  curve.test.ts  curve.ts  dismiss.test.ts  dismiss.ts  eq.test.ts  eq.ts  floating.test.ts  floating.ts  (+27 more)
src/osd/: Osd.svelte  Osd.test.ts  main.ts  osd.css
