[package]
name = "fastpeq"
version = "0.3.0"
description = "fastpeq — a fast Equalizer APO preset manager"
authors = ["fastpeq contributors"]
license = "MIT"
edition = "2024"

[lib]
# The `_lib` suffix keeps the lib name distinct from the `fastpeq` binary
# (a Windows-specific cargo constraint).
name = "fastpeq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastpeq-core = { path = "../crates/fastpeq-core" }
