[package]
name = "fastpeq"
version = "0.4.2"
description = "fastpeq — a fast Equalizer APO preset manager"
authors = ["fastpeq contributors"]
license = "MIT"
edition = "2024"

[lib]
# The `_lib` suffix keeps the lib name distinct from the `fastpeq` binary
# (a Windows-specific cargo constraint).
name = "fastpeq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastpeq-core = { path = "../crates/fastpeq-core" }

# Windows audio-endpoint enumeration + default-device switching (the "switch
# output device" hotkey action). Pinned to the same major already in the tree via
# Tauri's deps. IMMDeviceEnumerator/IPropertyStore come from these features; the
# undocumented IPolicyConfig is declared by hand in `audio.rs`.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
] }
# Pulled in directly so the `#[interface]` macro (which emits `windows_core::…`
# paths for the hand-declared IPolicyConfig) resolves. Same version as above.
windows-core = "0.62"

# USB HID access for hardware-EQ offload (the Moondrop DHA15 driver in
# `hardware/`). Windows-gated like the rest of the device/OS code so the core
# build and off-Windows tests don't pull it in; uses the system hid.dll.
hidapi = "2"
