[package]
name = "fastpeq"
version = "0.9.0"
description = "fastpeq — a fast Equalizer APO preset manager"
authors = ["fastpeq contributors"]
license = "MIT"
edition = "2024"

[lib]
# The `_lib` suffix keeps the lib name distinct from the `fastpeq` binary
# (a Windows-specific cargo constraint).
name = "fastpeq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastpeq-core = { path = "../crates/fastpeq-core" }
# Hardware parametric-EQ device drivers (USB HID) — the I/O half of EQ offload.
fastpeq-hw = { path = "../crates/fastpeq-hw" }

# Windows audio-endpoint enumeration + default-device switching (the "switch
# output device" hotkey action). `windows` and `windows-core` must move in
# lockstep: the `#[interface]`/`#[implement]` macros in `audio.rs` only compile
# when both crates are the same major (Tauri pulls in an older major
# transitively, which is fine — that copy isn't the one our code links against).
# IMMDeviceEnumerator/IPropertyStore come from these features; the undocumented
# IPolicyConfig is declared by hand in `audio.rs`.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    # IVirtualDesktopManager + GetForegroundWindow: re-anchor the OSD overlay to
    # the current virtual desktop (docs/OSD_OVERLAY_BUG.md, hypothesis E).
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# Pulled in directly so the `#[interface]` macro (which emits `windows_core::…`
# paths for the hand-declared IPolicyConfig) resolves. Must match `windows` above.
windows-core = "0.62"
