[package]
name = "fastpeq-core"
version = "0.7.0"
edition = "2024"
description = "Core library for fastpeq: detect, parse, edit, and serialize Equalizer APO configurations."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
