[package]
name = "fastpeq-hw"
version = "0.6.2"
description = "fastpeq hardware parametric-EQ device drivers (USB HID) and a driver-development CLI"
license = "MIT"
edition = "2024"

[dependencies]
fastpeq-core = { path = "../fastpeq-core" }
serde = { version = "1", features = ["derive"] }
# Only the CLI binary uses it (`list --json`); already in the app's tree.
serde_json = "1"

[target.'cfg(windows)'.dependencies]
hidapi = "2"

[[bin]]
name = "fastpeq-hw-cli"
path = "src/bin/fastpeq-hw-cli.rs"
